--- a/static/style.css
+++ b/static/style.css
@@ -67,7 +67,17 @@
 	border-radius: 0 4px 4px 0;
 }
 
-.form {
+.form-bhk {
+	max-width: 270px;
+	font-family: "Lucida Grande", Tahoma, Verdana, sans-serif;
+	font-weight: normal;
+	line-height: 1.625;
+	margin: auto;
+	margin-top: 100px;
+	padding-left: 16px;
+	z-index: 2;
+}
+.form-bath {
 	max-width: 270px;
 	font-family: "Lucida Grande", Tahoma, Verdana, sans-serif;
 	font-weight: normal;
@@ -76,6 +86,7 @@
 	padding-left: 16px;
 	z-index: 2;
 }
+
 
 h2 {
 	font-size: 18px;
