--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="img"></div>
 
-        <form action class="form">
+        <form action class="form-bhk">
             <h2>Area (Square Feet)</h2>
             <input type="text" class="area" id="uiSqft" class="floatLabel"
                 name="Squareft" value="1000">
@@ -37,7 +37,7 @@
             </div>
         </form>
 
-        <form action class="form">
+        <form action class="form-bath">
             <h2>Bath</h2>
             <div class="switch-field">
                 <input type="radio" id="radio-bath-1" name="uiBath" value="1">
